testing/tests/src/test/resources/golden/RuntimeTest/invalid-thread-checker-invalid-method.golden.txt
error: Invalid value: Method `assertThreadAccess` in class `test.InvalidThreadChecker5` must be public/internal
Encountered:
  here: Option yatagan.threadCheckerClassName = test.InvalidThreadChecker5
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: Invalid value: Method `assertThreadAccess` in class `test.InvalidThreadChecker5` must be static
Encountered:
  here: Option yatagan.threadCheckerClassName = test.InvalidThreadChecker5
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: Invalid value: Method `assertThreadAccess` in class `test.InvalidThreadChecker5` must have no parameters
Encountered:
  here: Option yatagan.threadCheckerClassName = test.InvalidThreadChecker5
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~